--- a/src/main/resources/templates/doc.html
+++ b/src/main/resources/templates/doc.html
@@ -2,47 +2,91 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>FileUPLOAD/ dOWNLOAD</title>
+<title>File UPLOAD/DOWNLOAD</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
  crossorigin="anonymous">
+ <style>
+ * {
+ margin:5px;
+ padding:5px;
+ }
+ </style>
 </head>
 <body>
-
-<h1> upload file</h1>
-<form id = "uploadFiles" name = "uploadFiles" method = "post" th:action=@{/uploadFiles} encType = "multipart/form-data">
-<h2><input type="file" name="files" multiple required/></h2>
-<h2><button type="submit">Submit</button></h2>
-</form>
-
-
-<div>
-<h2>List Of Documents</h2>
-<table>
-<thead>
-<tr>
-<th>Id</th>
-<th>File Name</th>
-<th>document_uid</th>
-<th>version_uid</th>
-<th>Created Date</th>
-<th> ViewFile</th>
-<th>Download File</th>
-</tr>
-</thead>
-<tbody>
-<tr th:each="doc:${docs}">
-<td th:text = "${doc.id}"/>
-<td th:text = "${doc.docName}"/>
-<td th:text = "${doc.document_uid}" />
-<td th:text = "${doc.version_uid}" />
-<td th:text = "${doc.createdDate}"/>
-<td><h3><a body  th:href="@{/view_file}">View</a> </h3></td>
-<td><h3><a th:href="@{/download_file}">Download</a></h3></td>
-</tr>
-</tbody>
-
-</table>
+<div class="container">
+	<h3> Upload File</h3>
+	<form id = "uploadFiles" name = "uploadFiles" method = "post" th:action=@{/uploadFiles} encType = "multipart/form-data">
+		<div class="form-group">
+			<input type="file" name="files" multiple required/>
+			<button class="btn btn-outline-primary" type="submit" value="submit">Submit</button>
+		</div>
+	</form>
+<br>
+	<div>
+	<h2>List of Documents</h2>
+	<table class="table table-bordered table-striped">
+		<thead class="thead-dark">
+			<tr>
+				<th>Id</th>
+					<th>Name</th>
+					<th>Upload Date</th>
+					<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="doc:${docs}">
+				<td th:text = "${doc.id}"/>
+				<td th:text = "${doc.docName}"/>
+				<td th:text = "${doc.createdDate}"/>
+				<td>
+	                    <button th:onclick="ViewOriginalFile( [[${doc.documentuid}]] ,[[ ${doc.versionuid}]], [[${doc.docName}]]  )">View File</button>||<button th:onclick="downloadOriginalFile( [[${doc.documentuid}]] ,[[ ${doc.versionuid}]], [[${doc.docName}]]  )">Download</button>
+	            </td>
+         </tbody>
+	</table>
+	</div>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"></script>
+<script>
+
+                function ViewOriginalFile(documentUID, versionUID, documentName)
+                {
+                	const url = "http://localhost:8080/"+ documentUID + versionUID + "/" + documentName.substring(0, documentName.lastIndexOf('.'))+".pdf";
+                	console.log(url);
+
+                    axios(url, {
+               	    method: 'GET',
+               	    responseType: 'blob' 
+               	    })
+               	    .then(response => {
+               	    const file = new Blob(
+               	    [response.data], 
+               	    {type: 'application/pdf'});
+               	    const fileURL = URL.createObjectURL(file);
+               	    window.open(fileURL);
+               	    })
+               	    .catch(error => {
+               	     console.log(error);
+               	  });
+                }
+                function downloadOriginalFile(documentUID, versionUID, documentName) {
+                
+                	const url = "http://localhost:8080/"+ documentUID + versionUID + "/" + documentName;
+                    var req = new XMLHttpRequest();
+                    req.open("GET", url, true);
+            	    req.responseType = "blob";
+            		req.onload = function (event) {
+                         var blob = req.response;
+            		     console.log(blob);
+				         var link=document.createElement('a');
+            		     link.href=window.URL.createObjectURL(blob);
+                         link.download=documentName;
+           		         link.click();
+           		     };
+           		     req.send();
+      		
+                }       
+</script>
 </body>
 </html>
