--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,17 +6,27 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
  crossorigin="anonymous">
+ <style>
+ * {
+ margin:10px;
+ padding:10px;
+ }
+ h2 {
+ text-align:center;
+ color: #3c7878;
+ }
+ </style>
 </head>
 <body>
 <div class="container">
 <div class = "row">
 <div class="col-md-6 offset-md-3">
 <div>
-<h1> Welcome to Document Convertor</h1>
+<h2> Welcome to Document Converter</h2>
 </div>
-<div>
-<h2><a th:href="@{/register}"> Signup</a></h2>
-<h2><a th:href="@{/login}"> Login</a></h2>
+<div class="d-flex justify-content-around">
+<h3><a class="btn btn-primary" role="button" th:href="@{/process_register}"> Sign Up</a></h3>
+<h3><a class="btn btn-primary" role="button" th:href="@{/login}"> Login</a></h3>
 </div>
 </div>
 </div>
